<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MyIdentityListPage</class>
 <widget class="QWidget" name="MyIdentityListPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>845</width>
    <height>381</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>My Identities</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="labelExplanation">
     <property name="textFormat">
      <enum>Qt::PlainText</enum>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QTableView" name="tableView">
     <property name="contextMenuPolicy">
      <enum>Qt::CustomContextMenu</enum>
     </property>
     <property name="toolTip">
      <string/>
     </property>
     <property name="tabKeyNavigation">
      <bool>false</bool>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::SingleSelection</enum>
     </property>
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="sortingEnabled">
      <bool>true</bool>
     </property>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="refreshButton">
       <property name="maximumSize">
        <size>
         <width>16777215</width>
         <height>48</height>
        </size>
       </property>
       <property name="toolTip">
        <string>Refresh identity list</string>
       </property>
       <property name="text">
        <string>Refresh</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="newIdentity">
       <property name="toolTip">
        <string>Create a new identity</string>
       </property>
       <property name="text">
        <string>New Identity</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="copyIdentity">
       <property name="toolTip">
        <string>Copy the currently selected identity to the system clipboard</string>
       </property>
       <property name="text">
        <string>Copy Identity ID</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="editButton">
       <property name="toolTip">
        <string>Edit selected identity</string>
       </property>
       <property name="text">
        <string>Edit</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="transferButton">
       <property name="toolTip">
        <string>Transfer selected identity</string>
       </property>
       <property name="text">
        <string>Transfer</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="newPubKey">
       <property name="toolTip">
        <string>Create a new public key used for transferring identities</string>
       </property>
       <property name="text">
        <string>New Public Key</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="whitelistButton">
       <property name="toolTip">
        <string>Open list of affiliates associated with this identity</string>
       </property>
       <property name="text">
        <string>Affiliations</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="signMultisigButton">
       <property name="text">
        <string>Sign Multisig Tx</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="exportButton">
       <property name="toolTip">
        <string>Export the data in the current tab to a file</string>
       </property>
       <property name="text">
        <string>Export</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../dynamic.qrc"/>
 </resources>
 <connections/>
</ui>
